--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
-  "name": "commonwealth-connect-training-project",
+  "name": "lab1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "react-scripts": "3.2.0"
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
+    "@types/hookrouter": "^2.2.1",
+    "bootstrap": "^4.3.1",
+    "hookrouter": "^1.2.3",
+    "jquery": "^3.4.1",
+    "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.9.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.1.2",
+    "styled-components": "^4.4.0",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
